fixed spacing above footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,13 +121,11 @@ a {
 }
 
 #footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
+ 
     width: 100%;
-    padding-top: 25px;
+    padding-top: 15px;
     padding-bottom: 25px;
-    margin-top: 25px;
+    margin-top: 0px;
     background-color: #666666;
     color: rgba(255, 255, 255, 0.829);
     font-family: helvetica;
